Bug 480819. Explicitly track all elements that need to be frozen when a document enters bfcache. r+sr=jst