content/base/src/nsDocument.cpp
@@ -7530,3 +7530,48 @@ nsDocument::UnsuppressEventHandlingAndFireEvents(PRBool aFireEvents)
   }
 }
 
+void
+nsIDocument::RegisterFreezableElement(nsIContent* aContent)
+{
+  if (!mFreezableElements) {
+    mFreezableElements = new nsTHashtable<nsPtrHashKey<nsIContent> >();
+    if (!mFreezableElements)
+      return;
+    mFreezableElements->Init();
+  }
+  mFreezableElements->PutEntry(aContent);
+}
+
+PRBool
+nsIDocument::UnregisterFreezableElement(nsIContent* aContent)
+{
+  if (!mFreezableElements)
+    return PR_FALSE;
+  if (!mFreezableElements->GetEntry(aContent))
+    return PR_FALSE;
+  mFreezableElements->RemoveEntry(aContent);
+  return PR_TRUE;
+}
+
+struct EnumerateFreezablesData {
+  nsIDocument::FreezableElementEnumerator mEnumerator;
+  void* mData;
+};
+
+static PLDHashOperator
+EnumerateFreezables(nsPtrHashKey<nsIContent>* aEntry, void* aData)
+{
+  EnumerateFreezablesData* data = static_cast<EnumerateFreezablesData*>(aData);
+  data->mEnumerator(aEntry->GetKey(), data->mData);
+  return PL_DHASH_NEXT;
+}
+
+void
+nsIDocument::EnumerateFreezableElements(FreezableElementEnumerator aEnumerator,
+                                        void* aData)
+{
+  if (!mFreezableElements)
+    return;
+  EnumerateFreezablesData data = { aEnumerator, aData };
+  mFreezableElements->EnumerateEntries(EnumerateFreezables, &data);
+}
