content/html/content/src/nsHTMLMediaElement.cpp
@@ -739,10 +739,12 @@ nsHTMLMediaElement::nsHTMLMediaElement(nsINodeInfo *aNodeInfo, PRBool aFromParse
     mDelayingLoadEvent(PR_FALSE),
     mIsRunningSelectResource(PR_FALSE)
 {
+  RegisterFreezableElement();
 }
 
 nsHTMLMediaElement::~nsHTMLMediaElement()
 {
+  UnregisterFreezableElement();
   if (mDecoder) {
     mDecoder->Shutdown();
     mDecoder = nsnull;
