content/html/content/src/nsHTMLObjectElement.cpp
@@ -148,10 +148,12 @@ nsHTMLObjectElement::nsHTMLObjectElement(nsINodeInfo *aNodeInfo,
   : nsGenericHTMLFormElement(aNodeInfo),
     mIsDoneAddingChildren(!aFromParser)
 {
+  RegisterFreezableElement();
 }
 
 nsHTMLObjectElement::~nsHTMLObjectElement()
 {
+  UnregisterFreezableElement();
   DestroyImageLoadingContent();
 }
 
