layout/base/nsPresShell.cpp
@@ -6658,29 +6658,24 @@ PresShell::RemoveOverrideStyleSheet(nsIStyleSheet *aSheet)
 }
 
 static void
-StopPluginInstance(PresShell *aShell, nsIContent *aContent)
+FreezeElement(nsIContent *aContent, void *aShell)
 {
-  nsIFrame *frame = aShell->FrameManager()->GetPrimaryFrameFor(aContent, -1);
-
-  nsIObjectFrame *objectFrame = do_QueryFrame(frame);
-  if (!objectFrame)
-    return;
-
-  objectFrame->StopPlugin();
-}
-
 #ifdef MOZ_MEDIA
-static void
-StopMediaInstance(PresShell *aShell, nsIContent *aContent)
-{
   nsCOMPtr<nsIDOMHTMLMediaElement> domMediaElem(do_QueryInterface(aContent));
-  if (!domMediaElem)
+  if (domMediaElem) {
+    nsHTMLMediaElement* mediaElem = static_cast<nsHTMLMediaElement*>(aContent);
+    mediaElem->Freeze();
     return;
-
-  nsHTMLMediaElement* mediaElem = static_cast<nsHTMLMediaElement*>(aContent);
-  mediaElem->Freeze();
-}
+  }
 #endif
+
+  nsIPresShell* shell = static_cast<nsIPresShell*>(aShell);
+  nsIFrame *frame = shell->FrameManager()->GetPrimaryFrameFor(aContent, -1);
+  nsIObjectFrame *objectFrame = do_QueryFrame(frame);
+  if (objectFrame) {
+    objectFrame->StopPlugin();
+  }
+}
 
 static PRBool
 FreezeSubDocument(nsIDocument *aDocument, void *aData)
@@ -6695,16 +6690,7 @@ FreezeSubDocument(nsIDocument *aDocument, void *aData)
 void
 PresShell::Freeze()
 {
-  nsCOMPtr<nsIDOMDocument> domDoc = do_QueryInterface(mDocument);
-  if (domDoc) {
-    EnumeratePlugins(domDoc, NS_LITERAL_STRING("object"), StopPluginInstance);
-    EnumeratePlugins(domDoc, NS_LITERAL_STRING("applet"), StopPluginInstance);
-    EnumeratePlugins(domDoc, NS_LITERAL_STRING("embed"), StopPluginInstance);
-#ifdef MOZ_MEDIA
-    EnumeratePlugins(domDoc, NS_LITERAL_STRING("video"), StopMediaInstance);
-    EnumeratePlugins(domDoc, NS_LITERAL_STRING("audio"), StopMediaInstance);
-#endif
-  }
+  mDocument->EnumerateFreezableElements(FreezeElement, this);
 
   if (mCaret)
     mCaret->SetCaretVisible(PR_FALSE);
@@ -6755,28 +6741,23 @@ PresShell::NeedsFocusOrBlurAfterSuppression(nsPIDOMEventTarget* aTarget,
 }
 
 static void
-StartPluginInstance(PresShell *aShell, nsIContent *aContent)
+ThawElement(nsIContent *aContent, void *aShell)
 {
-  nsCOMPtr<nsIObjectLoadingContent> objlc(do_QueryInterface(aContent));
-  if (!objlc)
-    return;
-
-  nsCOMPtr<nsIPluginInstance> inst;
-  objlc->EnsureInstantiation(getter_AddRefs(inst));
-}
-
 #ifdef MOZ_MEDIA
-static void
-StartMediaInstance(PresShell *aShell, nsIContent *aContent)
-{
   nsCOMPtr<nsIDOMHTMLMediaElement> domMediaElem(do_QueryInterface(aContent));
-  if (!domMediaElem)
+  if (domMediaElem) {
+    nsHTMLMediaElement* mediaElem = static_cast<nsHTMLMediaElement*>(aContent);
+    mediaElem->Thaw();
     return;
-
-  nsHTMLMediaElement* mediaElem = static_cast<nsHTMLMediaElement*>(aContent);
-  mediaElem->Thaw();
-}
+  }
 #endif
+
+  nsCOMPtr<nsIObjectLoadingContent> objlc(do_QueryInterface(aContent));
+  if (objlc) {
+    nsCOMPtr<nsIPluginInstance> inst;
+    objlc->EnsureInstantiation(getter_AddRefs(inst));
+  }
+}
 
 static PRBool
 ThawSubDocument(nsIDocument *aDocument, void *aData)
@@ -6791,16 +6772,7 @@ ThawSubDocument(nsIDocument *aDocument, void *aData)
 void
 PresShell::Thaw()
 {
-  nsCOMPtr<nsIDOMDocument> domDoc = do_QueryInterface(mDocument);
-  if (domDoc) {
-    EnumeratePlugins(domDoc, NS_LITERAL_STRING("object"), StartPluginInstance);
-    EnumeratePlugins(domDoc, NS_LITERAL_STRING("applet"), StartPluginInstance);
-    EnumeratePlugins(domDoc, NS_LITERAL_STRING("embed"), StartPluginInstance);
-#ifdef MOZ_MEDIA
-    EnumeratePlugins(domDoc, NS_LITERAL_STRING("video"), StartMediaInstance);
-    EnumeratePlugins(domDoc, NS_LITERAL_STRING("audio"), StartMediaInstance);
-#endif
-  }
+  mDocument->EnumerateFreezableElements(ThawElement, this);
 
   if (mDocument)
     mDocument->EnumerateSubDocuments(ThawSubDocument, nsnull);
